<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/blurb"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/blurb"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="101dp"
        android:layout_weight="0.30"
        android:contentDescription="@string/desc" />

    <TextView
        android:id="@+id/caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blurb"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/textUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/blurb"
        android:ems="10"
        android:hint="@string/caption"
        android:text="@string/blurb" />

    <EditText
        android:id="@+id/TextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.37"
        android:inputType="textMultiLine"
        android:text="@string/describe" />
        
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnClick" />

</LinearLayout>